UNRELEASED
 * New COLOR_STYLE option: USER_CUSTOM
   Thanks to Eric Davis <edavis@insanum.com>
 * Allow fractional font size
   Thanks to Alex Kritikos <https://github.com/akrito>

0.5.2~pre1
 * Support command line options: -fg, -bg, -sa
   Thanks to Globe Trotter <itsme_410 AT yahoo DOT com>
 * Support EXPORT_WINDOWID, like what xterm and rxvt do.
   Thanks to Peter Bui <peter DOT j DOT bui AT gmail DOT com>
 * Improve desktop file, thanks to adaptee <adaptee AT gmail DOT com>
 * New COLOR_STYLE option: SOLARIZED_DARK and SOLARIZED_LIGHT, closes #8.
 * Fix COLOR_STYLE data according to xterm-279 and linux console in qemu
 * Workaround for Caps lock problem by changing hotkey settings, issue #7.

0.5.1
 * Better compatibility with some compilers and CFLAGS
   Thanks to Daniel Richard G. <skunk AT iSKUNK DOT ORG>
 * Support key bindings for ALT_SHIFT, CTRL_ALT_SHIFT, and CTRL_SHIFT
 * Auto-detect gtk_*_resize_grip in dlopen() mode
 * Fix a potential bug for HOTKEY_SCROLL_ONE_PAGE_*
 * Strict minimum font size to 1
 * Hide DEFAULT_ENCODING, PROGRAM_NAME, and PROGRAM_VERSION
 * Make everything GTK+ 3.4.0 compatible

0.5.1~pre3
 * New hotkey definition method, support ALT and SHIFT, closes #2.
   The new behavior breaks old hotkey definitions.
   If you have old conffiles, please update them to latest format.
 * Support TAB_NEW_PATH_EQUAL_OLD when open new evilvte window, closes #3.
 * Support HOTKEY_SCROLL_ONE_PAGE_*, closes #4.
 * Some distributions backports gtk_*_resize_grip to GTK+ 2.x.
   Try export CFLAGS="-DGTK_HAS_RESIZE_GRIP" and rebuild evilvte
 * Drop old CTRL_ALT option
 * Deprecate HOTKEY_TAB_GO_TO_NUMBER, use ALT_NUMBER_GO_TO_TAB_NUMBER or
   CTRL_NUMBER_GO_TO_TAB_NUMBER instead

0.5.1~pre2
 * Support TAB_NEW_TAB_AT_TAB_ONE, let new tab always be the first tab
   Thanks to shenfeng <https://github.com/shenfeng>
 * Make close button smaller
 * Improve resizing behavior with "-VteTerminal-inner-border" property

0.5.1~pre1
