@@ -1,7 +1,7 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1,SHA512
 
-bdc88a08274ec278d0d9b1eb0bdc230b5ee413fa  16383 ChangeLog
+bb679b462a01d222d4d17d8254ade947692d05cb  16500 ChangeLog
 1c2d983c7261aac7f3acb847892b9600de8c4307   2889 Makefile
 7103c2ecddea29134185e30fbf7ba2daf3f11c08  10264 configure
 4cc77b90af91e615a64ae04893fdffa7939db84c  18092 gpl-2.0.txt
@@ -22,22 +22,22 @@ edd3909afc7ea08a5108aa2b26425f01596eca52   1433 misc/evilvte.desktop
 299e5764800d97fb4d4a7436eee21bb32958f105   1882 misc/manpage.1
 a83357473eb7c431a9f8e2813e02553d5ffa54b7    338 misc/showvte.1
 9f06e8ce1e9636956fb83dde202cdbad0715207d  12158 src/config.h
-7d3ac572898ee7680207890ccd722ecb346a74b2 168250 src/evilvte.c
+05c2e4b3301f67aa827b20d36e281b532f7bd836 168671 src/evilvte.c
 838b43b5274c2e7f173aeb0d6b24aea85913e79d  16438 src/process.sh
 -----BEGIN PGP SIGNATURE-----
 
-iEYEARECAAYFAlFfxHgACgkQdEpXpumNYVl++ACfdPYuhMXXKsD4Gi2+IMboA5GQ
-U9AAoIQoSAkP4v7ztSCYab/H6bwj0K36iQIcBAEBCgAGBQJRX8R4AAoJELc3H0m+
-i6gZt64QAK1grXR06cvMrISxkCPdIKWZGUK9gHpf/AvNaiXHnBJnvxxP0uXBflzJ
-aRitUD/dLdxmdl4rhdNLUpk+KBKfhCUVu8MqjgKNCXVxLZaISsCMmjp6W4DRhyB1
-xsqVx3nCvcpS2khtAh66RvKHvbHoQkJgpIjTc6TXTOZ1XpG74UDm5E+4y/S59f5k
-9VNUL8tYry8ze065fCNkO6gBYeTo590Bl+Ev/HHLn5/wHBdI2zwwKYpIs9F0JXM+
-3zCGEctSTouXLbUaiHBVBBAItBicbxqH8Zv7M5r8NCRrc6iCd7BAiM8VkAdEp/8L
-nh75BVtnJGtwlGhR6fxep9eTH3t8EXaGj9rud1JawQtl/lRHlMKmm5aV5sGgGzzW
-CPwjfGzgMRvRfOEzZMTQxfa/8b2m0r68WbG0A7gMFOubAR1p/4fgyNbK1RkD8YUd
-Wqn4E1CIE1Ef0TkHHZv5FkkZm7p3N3v9S53kE86Bjs790PxH8UZy1FqMgXxkhAOy
-g/+6NDdxjypfxIAOdSYHjY2NdV6k5r4ZX12fMFfeidKd4TsCqNWt4qOi5jlmDCSV
-Y4Lir+8L7hlgmkQ+BBf0YeVX8mVecAZJoYcWVH91JH8s28O5pbswwHaBpDwUi6We
-wXi9AE7/yCaxP2DokGRaBGaYssX3xvSTi91on1FLIyoUUNqqx8dr
-=j25N
+iEYEARECAAYFAlFfxOkACgkQdEpXpumNYVlVPACeL+2WB2bqZK05O+bRj43wUcNf
+JQQAn0Jz1N4QBFXyaa3wPhjZAQIkpu5CiQIcBAEBCgAGBQJRX8TpAAoJELc3H0m+
+i6gZHogP/jpV8Ao6E6tooyq536BwQBkiHzeJMhbUoQC/Noq88a++Q9FD2LJ0xsQj
+MzzLqj8JkPGpdxAth7NV28Sumb4AyNk1gwNb1IxLODg/+R7wtE4dVoqTiliMbDV1
+W6M7n3WmVgAJB7fPbwNC6MnL1gpN1vJceBhEWSWksBJ5ADrljVRWgjRjizM281uI
+nCpybJ/rqRbUYIzdUVM9jHwTiWyvfjaqPywjwpt88OFUiWlHngK6axjcp55pJjmA
+JaILgjQQ9hv9JIrJpbuqidxMkMv7+AZ+fFdnPVaV5QLd27vYeu89fV3mPoYExFSQ
+uCcMzg0QYj12xxaiCl1yJPzJk6VoNDlaBOrht4syRtPLpWFrtPQAZ1FwSeMjlh+I
+OLiPMkbJQ2weIESS1Qm3YwUYH5ycDuw9ODc/kRM0EWN1PFjFHN/3w604eh6p9OhB
+1ubt+VsjQNRpjqHqF+xumfT+wZKC3gWAWD5LUN3KxreEpIbfLlCaKxJfrp2Wr0Bm
+JsKZYwHEbs8a4ql+8NftKWghwHw59emA6BoxEGRYo2wtAfQJSYOgXhaskAvHhuZg
+x5oh9jKrlJYmdzECxnYd951dTTV39i7Mg/1yOVZIx5/mHiPb0j/PKqFiNwQJlDcp
+96pTOm7aEIsJU32Tggm7dApImfGNRn29OslDmRfjoL7274/60/YQ
+=a2qu
 -----END PGP SIGNATURE-----
